@@ -13,12 +13,14 @@
         private string name;
         private string[] parameterNames;
         private ICommand body;
+        private bool isdefault;
 
-        public DefineFunctionCommand(string name, string[] parameterNames, ICommand body)
+        public DefineFunctionCommand(string name, string[] parameterNames, ICommand body, bool isdefault)
         {
             this.name = name;
             this.parameterNames = parameterNames;
             this.body = body;
+            this.isdefault = isdefault;
         }
 
         public string FunctionName { get { return this.name; } }
@@ -26,6 +28,8 @@
         public string[] ParameterNames { get { return this.parameterNames; } }
 
         public ICommand Body { get { return this.body; } }
+
+        public bool IsDefault { get { return this.isdefault; } }
 
         public void Execute(IBindingEnvironment environment)
         {
